--- a/error.html
+++ b/error.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-    	<title>Tiga Tours - Tours & Travel</title>	
+    	<title>CV Yanks Tour & Travel</title>	
     	<meta name="viewport" content="width=device-width">	
-    	<link rel="icon" href="images/logo 2.png">
+    	<link rel="icon" href="images/icon.png">
     	<link rel="stylesheet" href="assets/css/lumen.bootstrap.css">
     	<style type='text/css' rel="stylesheet">
     		body{
-                background: url("assets/img/geometry2.png");
+                background: url("assets/img/symphony.png");
                 font-family: "Roboto";
                 font-size: 120%;
     		}
@@ -51,7 +51,7 @@
     				<b>Error 404</b><br>
     				Halaman yang anda tuju tidak ada. Jika anda pikir ini sebuah kesalahan, silakan kontak <a href='kontak'>kami</a>.<br><br><br>
     				<button class='btn btn-primary' onClick='history.back(-1)'>Kembali</button><br><br><br><br>
-    				Tiga Tours - Tours & Travel &reg;
+    				&copy; CV Yanks Tours and Transport
     			</div>
     		</div>
     	</div>
