--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-    	<title>CV Yanks Tour & Travel</title>	
+    	<title>CV Yanks Tours & Transport</title>	
     	<meta name="viewport" content="width=device-width">	
     	<link rel="icon" href="images/icon.png">
     	<link rel="stylesheet" href="assets/css/lumen.bootstrap.css">
@@ -9,7 +9,7 @@
     		body{
                 background: url("assets/img/symphony.png");
                 font-family: "Roboto";
-                font-size: 120%;
+                font-size: 15dri0%;
     		}
     		@font-face{
     			font-family: "Roboto";
